# solvespace

./: Makefile.am  configure.ac
example/: Makefile.am
exposed/: CDemo.c  Makefile.am
extlib/si/: si.h  siSync.h  siSyncPriv.h  siapp.h  spwdata.h  spwerror.h  spwmacro.h
include/: slvs.h
src/: Makefile.am  bsp.cpp  constraint.cpp  draw.cpp  drawconstraint.cpp  drawentity.cpp  exportvector.cpp  expr.cpp  file.cpp  generate.cpp  glhelper.cpp  graphicswin.cpp  groupmesh.cpp  posixutil.cpp  solvespace.cpp  solvespace.h  style.cpp  ttf.cpp  util.cpp
src/unix/: unixutil.cpp
src/win32/: freeze.cpp
tools/: ttf2c.cpp
